# QTonRaspberryPi

./: DockerFileRasp  Dockerfile  Dockerfile.app  README.md  buildApp.sh  fix_symlinks.py  helperTasks.sh  opencvToolchain.cmake  qt5.14.2onRaspberrypi  toolchain.cmake
Qt6.8forJetson/: DockerFileJetson  DockerFileNx  Dockerfile  Dockerfile.app  README.md
Qt6.8forJetson/projectQml/: main.qml
QtJetsonNano5.15.0/: README.md
QtJetsonNano5.15.0WithX/: README.md  qmake.conf
QtJetsonNx/: DockerFileNx  Dockerfile  README.md
QtJetsonNx6.6.3/: DockerFileNx  Dockerfile  README.md  helperTasks.sh  toolchain.cmake
QtJetsonNx6.6.3/projectQml/: CMakeLists.txt
QtOpencvExample/: CMakeLists.txt  main.cpp  toolchain.cmake
QtRasberryPiDocker6.6.1/: Dockerfile
QtRaspberryPi5.14.2/: README.md
QtRaspberryPi6.6.1/: README.md
QtRaspberryPiWithDocker6.6.1/: DockerFileRasp  Dockerfile  README.md  build.logEx
QtRaspberryPiWithDocker6.6.1/project/: CMakeLists.txt  main.cpp
QtRaspberryPiWithDocker6.6.1/projectQml/: CMakeLists.txt  main.qml
project/: main.cpp
projectQml/: MyObject.h  main.cpp
